--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             if (file) {
                 var formData = new FormData();
                 formData.append('file', file);
-                fetch('http://213.233.184.137:9090/predict', {
+                fetch('http://213.233.184.137:8000/predict/', {
                         method: 'POST',
                         body: formData,
                     })
