--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             if (file) {
                 var formData = new FormData();
                 formData.append('file', file);
-                fetch('https://mlsd-indicatorss.darkube.app/predict', {
+                fetch('/predict', {
                         method: 'POST',
                         body: formData,
                     })
