--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             background-color: #45a049; /* Darker green on hover */
         }
 
+        label:hover {
+            background-color: #45a049; /* Darker green on hover */
+        }
+
         img {
             width: 30%;
             height: auto;
