--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             reader.addEventListener("load", function() {
                 preview.text = "File uploaded successfully:" + file.name + "\n Push the predict button to see suggestions."; // show image in <img> tag
             }, false);
-            // if (file) {
-            //     reader.readAsDataURL(file);
-            // }
+            if (file) {
+                reader.readAsDataURL(file);
+            }
         }
 
         function uploadFile(file) {
