--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
     <script type="text/javascript">
         function previewFile() {
-            const preview = document.querySelector('#serverMsg');
+            const preview = document.getElementById('serverMsg');
             var file = document.getElementById('fileInput').files[0];
             const reader = new FileReader();
             reader.addEventListener("load", function() {
-                preview.text = "File uploaded successfully:" + file.name + "\n Push the predict button to see suggestions."; // show image in <img> tag
+                preview.innerText = "File uploaded successfully:" + file.name + "\n Push the predict button to see suggestions."; // show image in <img> tag
             }, false);
             if (file) {
                 reader.readAsDataURL(file);
