--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         }
         function get_label_display(label) {
             if (label < 1) {
-                return 'Buy!';
-            } else {
                 return "Don't buy!";
+            } else {
+                return "Buy!";
             }
         }
         function uploadFile(file) {
